--- a/job-crawler/frontend/package.json
+++ b/job-crawler/frontend/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@carbon/icons-react": "^10.30.0",
+    "axios": "^1.7.2",
     "carbon-components": "^10.30.0",
     "carbon-components-react": "^7.30.0",
-    "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "sass": "^1.32.8"
+    "file-saver": "^2.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.32.8",
+    "web-vitals": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
